<resources>
    <string name="app_name">Семенова Алена</string>

        <string name="about_me">Меня зовут Алена, я хочу стать андроид - разработчиком. </string>
        <string name="about_title">О себе</string>
        <string name="repozitori_title">Репозиторий</string>
        <string name="repozitori_text">github.com/SemenovaAlena91/DevIntensive</string>
        <string name="prof_social_title">Профиль в VK</string>
        <string name="prof_social_text">vk.com/alenka_nya</string>
        <string name="mail_title">Электронная почта</string>
        <string name="mail_text">semenova.alena91@yandex.ru</string>
        <string name="phone_title">Мобильный телефон</string>
        <string name="phone_text">+7 (953) 000-00-00</string>

        <string name="quantity_rating">4</string>
        <string name="quantity_lines_code">500</string>
        <string name="quantity_projects">2</string>
        <string name="rating">Рейтинг</string>
        <string name="lines_code">Написано строк кода</string>
        <string name="projects">Проектов</string>
</resources>
