<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.MainActivity">

    <!--Bar total-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="#5d5d5d"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

    <LinearLayout
            style="@style/layout_score">

        <TextView
                  android:id="@+id/rating_title_tv"
                  style="@style/rating_value"/>
        <TextView
                  android:id="@+id/rating_body_tv"
                  style="@style/text_view.bottom"
                  android:fontFamily="sans-serif-condensed"
                  android:text="@string/rating"/>
    </LinearLayout>

     <View
         style="@style/vertical_line"></View>
            <LinearLayout
               style="@style/layout_score">

            <TextView
                   android:id="@+id/lines_code_title_tv"
                    style="@style/lines_code_value"/>

            <TextView
                    android:id="@+id/lines_code_body_tv"
                    style="@style/text_view.bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/lines_code"/>
            </LinearLayout>

        <View
                style="@style/vertical_line"></View>

            <LinearLayout
                style="@style/layout_score">

            <TextView
                   android:id="@+id/project_title_tv"
                   style="@style/projects_value"/>

            <TextView
                    android:id="@+id/project_body_tv"
                    style="@style/text_view.bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/projects"/>
            </LinearLayout>

       </LinearLayout>
        <!--Mobile-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
               style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
              android:layout_width="0dp"
              android:layout_height="@dimen/size_large_72"
              android:layout_gravity="bottom"
              android:layout_marginLeft="@dimen/spacing_medium_32dp"
              android:layout_marginRight="@dimen/spacing_normal_16dp"
              android:layout_weight="1"
              android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/phone_title"
                        android:inputType="phone"
                        android:text="@string/phone_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_speaker_phone_black_24dp"/>
        </LinearLayout>

        <View
android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mail_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mail_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/mail_title"
                        android:inputType="textEmailAddress"
                        android:text="@string/mail_text"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_call_made_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--social-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/profid_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/prof_social_title"
                        android:inputType="text"
                        android:text="@string/prof_social_text"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_assignment_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--GitHub-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_assignment_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/repositorii_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"

                        android:hint="@string/repozitori_title"
                        android:inputType="textMultiLine"
                        android:text="@string/repozitori_text"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--About-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/about_title"


                        android:inputType="textMultiLine"
                        android:text="@string/about_me"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>